[gd_scene load_steps=19 format=2]

[ext_resource path="res://main_scene.gd" type="Script" id=1]
[ext_resource path="res://simulation.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/controls/play_button.png" type="Texture" id=3]
[ext_resource path="res://assets/controls/play_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/controls/play_button_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/controls/play_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/controls/pause_button.png" type="Texture" id=7]
[ext_resource path="res://assets/controls/pause_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/controls/pause_button_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/controls/pause_button_disabled.png" type="Texture" id=10]
[ext_resource path="res://assets/controls/stop_button.png" type="Texture" id=11]
[ext_resource path="res://assets/controls/stop_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/controls/stop_button_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/controls/stop_button_disabled.png" type="Texture" id=14]
[ext_resource path="res://assets/controls/ff_button.png" type="Texture" id=15]
[ext_resource path="res://assets/controls/ff_button_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/controls/ff_button_hover.png" type="Texture" id=17]
[ext_resource path="res://assets/controls/ff_button_disabled.png" type="Texture" id=18]

[node name="main_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="simulation_parts" type="Control" parent="."]
margin_left = 288.307
margin_top = 99.3489
margin_right = 328.307
margin_bottom = 139.349

[node name="simulation" parent="simulation_parts" instance=ExtResource( 2 )]
position = Vector2( 13.9962, 39.6559 )
scale = Vector2( 0.7, 0.7 )

[node name="play_button" type="TextureButton" parent="simulation_parts"]
margin_left = 203.831
margin_top = -38.7375
margin_right = 284.831
margin_bottom = 32.2625
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="pause_button" type="TextureButton" parent="simulation_parts"]
margin_left = 296.831
margin_top = -38.7375
margin_right = 378.831
margin_bottom = 32.2625
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="stop_button" type="TextureButton" parent="simulation_parts"]
margin_left = 390.285
margin_top = -39.1777
margin_right = 471.285
margin_bottom = 31.8223
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
expand = true
stretch_mode = 2

[node name="ff_button" type="TextureButton" parent="simulation_parts"]
margin_left = 484.201
margin_top = -39.1777
margin_right = 565.201
margin_bottom = 31.8223
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
expand = true
stretch_mode = 2
[connection signal="pressed" from="simulation_parts/play_button" to="simulation_parts/simulation" method="play_sim"]
[connection signal="pressed" from="simulation_parts/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="simulation_parts/pause_button" to="simulation_parts/simulation" method="pause_sim"]
[connection signal="pressed" from="simulation_parts/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="simulation_parts/stop_button" to="simulation_parts/simulation" method="stop_sim"]
[connection signal="pressed" from="simulation_parts/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="simulation_parts/ff_button" to="simulation_parts/simulation" method="change_ff_level"]
